[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/valve/valve.png" type="Texture" id=1]
[ext_resource path="res://scripts/Valve.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Valve" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Valve_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Valve_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
